# amalgam

./: Cargo.toml  README.md
contracts/amalgam/: Cargo.toml  README.md
contracts/amalgam/src/: contract.rs  error.rs  exec.rs  msg.rs  query.rs  state.rs
